Responsive fix calendar button mobile

--- a/src/components/calendar/index.module.scss
+++ b/src/components/calendar/index.module.scss
@@ -36,7 +36,4 @@
 
 .calendarButton {
 	font-family: "Montserrat", sans-serif;
-	@media screen and (max-width: 600px) {
-		height: 85px;
-	}
 }
